[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-assets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "faker>=39.0.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

[project.scripts]
generate-reports = "kairos_assets.main:generate_assets_and_reports"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
